[gd_scene load_steps=5 format=3 uid="uid://fja02r6tv40w"]

[ext_resource type="PhysicsMaterial" uid="uid://bhsh6ehsici0y" path="res://Materials/Physics/Frictionless.tres" id="1_hhdy1"]
[ext_resource type="Script" uid="uid://nitlwgig5ort" path="res://Scripts/treasures/treasure.gd" id="2_lxfyp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hhdy1"]
height = 1.3

[sub_resource type="BoxShape3D" id="BoxShape3D_h85lg"]
size = Vector3(1.4, 1.4, 1.4)

[node name="Treasure" type="RigidBody3D"]
collision_mask = 3
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
physics_material_override = ExtResource("1_hhdy1")
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("2_lxfyp")

[node name="Skin" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.7, 0, 0, 0, 0.49497473, -0.49497473, 0, 0.49497473, 0.49497473, 0, 0.7, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.9802322e-08, 0.65042716, 2.9802322e-08)
shape = SubResource("CapsuleShape3D_hhdy1")

[node name="ContactBox" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ContactBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.9604645e-08, 5.9604645e-08, 5.9604645e-08)
shape = SubResource("BoxShape3D_h85lg")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.03352219, 0)
target_position = Vector3(0, -0.5, 0)
collision_mask = 3
collide_with_areas = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="ContactBox" to="." method="_on_contact_box_body_entered"]
